--- a/templates/inventory.html
+++ b/templates/inventory.html
@@ -256,6 +256,38 @@
             // Append the JSON string as a query parameter to the URL
             window.location.href = `/cart/?data=${cartData}`;
         }
+        // function cart() {
+        //     // Create a form element
+        //     const form = document.createElement('form');
+        //     form.method = 'post';
+        //     form.action = '/cart/';
+
+        //     // Create an input element for the JSON data
+        //     const input = document.createElement('input');
+        //     input.type = 'hidden';
+        //     input.name = 'data';
+        //     input.value = JSON.stringify(shoppingCart);
+
+        //     // Append the input to the form
+        //     form.appendChild(input);
+
+        //     // Append the form to the body
+        //     document.body.appendChild(form);
+
+        //     // Submit the form
+        //     form.submit();
+        // }
+        // function cart() {
+        //     const cartData = JSON.stringify(shoppingCart);
+
+        //     // Store data in local storage
+        //     localStorage.setItem('cartData', cartData);
+
+        //     // Redirect or perform other actions as needed
+        //     window.location.href = '/cart/';
+        // }
+
+
 
         function return_to_club() {
             window.location.href = `/club/`;
